2004-11-14  MenTaLguY  <mental@rydia.net>

	* configure.ac, src/gc-core.h, src/gc-managed.h, src/gc-anchored.h,
	  src/gc-finalized.h, src/gc.cpp:

	  make disabling the collector a run-time rather than a compile-time
	  option; there are now three garbage collector options, selectable
	  by setting the _INKSCAPE_GC environment variable:

	   * enable - the normal collector (default)
	   * debug - the debugging collector
	   * disable - use standard malloc in place of the libgc allocator

2004-11-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/bezier-utils.cpp: Make end tangent/s be unconstrained for
	  sp_bezier_fit_cubic, sp_bezier_fit_cubic_r, and around corner nodes.

	* src/pencil-context.cpp (fit_and_split): Allow the bezier fitter to
	  choose the middle control points freely except to the extent required
	  for smooth nodes.

	* src/display/bezier-utils.cpp (generate_bezier):
	  If either end tangent is specified as zero then estimate the
	  corresponding control point without constraining its direction
	  from the endpoint.

	* src/pencil-context.h, src/pencil-context.cpp
	  (fit_and_split, sp_pencil_context_init): Explicitly remember required
	  tangent instead of using "first two points" hack.

	* src/display/bezier-utils.cpp (sp_bezier_fit_cubic_full):
	  Detect & prevent "ghost spikes", by allowing a corner node if
	  the specified tangent would result in a spike.

	* src/display/bezier-utils.cpp (generate_bezier): Better handling
	  of the case of infinite solutions for the lengths of the two
	  tangent vectors: try requiring that the lengths equal each other,
	  and solving for that length (just one variable).

2004-11-13  Kees Cook  <kees@outflux.net>

	* src/document.cpp: wrapped updateDisplay call in undo insensitivity.
	  Closes bug #1030436.

2004-11-12  MenTaLguY  <mental@rydia.net>

	* src/main.cpp: fpresetsticky -> fpsetsticky

	* src/verbs.cpp: cast width changes

	* src/libnrtype/FlowBoxes.h, src/libnrtype/FlowDefs.h,